@@ -88,7 +88,7 @@ struct JeolParams;
 
 #define MAX_BUFFERS  20
 #define MAX_ROLL_BUFFERS 14
-#define MAX_FFT_BUFFERS 4
+#define MAX_FFT_BUFFERS 8
 #define MAX_STORES    8
 #define MAX_EXTRA_SAVES 5
 #define MAX_EXTRA_RECORDS 30
