@@ -3,6 +3,17 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+2/21/17: Changed message from SEMCCD plugin about two copies to refer to
+looking for a hung copy of DM; released mutex earlier (In 3.6).
+
+2/20/17: Fixed copying of remote K2 references when there just a
+DigitalMicrographReferencePath and no RemoteDMRefererencePath entry (In 3.6).
+
+2/20/17: Increased size of FFT stack to 8 (In 3.6).
+
+2/20/17: Showed camera name and dose rate on as many image types as would be
+meaningful (In 3.6).
+
 2/19/17: Added report of difference from previous calibration when doing
 coma-free calibration (In 3.6).
 
